Fixed menu bar, fixed alignment of profile elements

--- a/client/views/profile/user_nav.less
+++ b/client/views/profile/user_nav.less
@@ -1,3 +1,24 @@
-.top-margin-here {
-  margin-top: 20px;
+.navbar-top {
+  padding: 22.5px 0;
+  background-color: #4d4d4d;
+  -webkit-border-radius: 0 !important;
+  -moz-border-radius: 0 !important;
+  border-radius: 0 !important;
+  -webkit-font-smoothing: antialiased;
+}
+
+
+.navbar-brand {
+  padding: 0 10px 0 0;
+}
+
+@media(min-width:768px) {
+
+  .navbar-top .navbar-brand {
+    padding: 0 10px 0 0;
+  }
+}
+
+.nav-bar-links {
+  color: #fff;
 }
